objects/redwing__Survey_Question__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Answer_Sequence__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Answer Sequence</label>
        <referenceTo>redwing__Answer_Sequence__c</referenceTo>
        <relationshipLabel>Survey Questions</relationshipLabel>
        <relationshipName>Survey_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Question_Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Topic</label>
        <referenceTo>redwing__Question_Topic__c</referenceTo>
        <relationshipLabel>Survey Questions</relationshipLabel>
        <relationshipName>Survey_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Question__c</fullName>
        <label>Question</label>
        <length>20000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>redwing__Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Survey_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Page</label>
        <referenceTo>redwing__Survey_Page__c</referenceTo>
        <relationshipLabel>Survey Questions</relationshipLabel>
        <relationshipName>Survey_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>SelectOneQuestion</fullName>
                </value>
                <value>
                    <fullName>SelectMultipleQuestion</fullName>
                </value>
                <value>
                    <fullName>True/False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Survey Question</label>
    <nameField>
        <displayFormat>SQN-{0000000}</displayFormat>
        <label>Survey Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>